Java 17 improvements. Test fixes. Libraries updates (#1035)